--- a/etc/nginx/prod_django.conf
+++ b/etc/nginx/prod_django.conf
@@ -1,6 +1,6 @@
 server {
 	listen 80;
-	server_name audb.ly *.audb.ly;
+	server_name muxli.st *.muxli.st;
 
 	location /static/ {
 		root /home/tpetr/repos/muxlist/;
