--- a/etc/nginx/prod_maintenance.conf
+++ b/etc/nginx/prod_maintenance.conf
@@ -1,6 +1,6 @@
 server {
 	listen 80;
-	server_name audb.ly *.audb.ly;
+	server_name muxli.st *.muxli.st;
 
-        root /home/tpetr/repos/audbly/static/maintenance/;
+        root /home/tpetr/repos/muxlist/static/maintenance/;
 }
