prod needs symlink

--- a/etc/nginx/prod.conf
+++ b/etc/nginx/prod.conf
@@ -1,6 +1,1 @@
-server {
-	listen 80;
-	server_name audb.ly *.audb.ly;
-
-        root /home/tpetr/repos/audbly/static/maintenance/;
-}
+/home/tpetr/repos/muxlist/etc/nginx//prod_django.conf
