make max body bigger

--- a/etc/nginx/prod_django.conf
+++ b/etc/nginx/prod_django.conf
@@ -2,6 +2,8 @@ server {
 	listen 80;
 	server_name muxli.st *.muxli.st;
 
+        client_max_body_size 10m;
+
 	location /static/ {
 		root /home/tpetr/repos/muxlist/;
 		break;
